fix: layout issues

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 body.no-scroll {
   overflow: hidden;
 }
@@ -96,6 +100,7 @@ body.no-scroll {
   }
   &.nav--not-home {
     left: -16rem;
+    z-index: 100;
   }
 }
 
@@ -179,6 +184,7 @@ body.no-scroll {
     left: -10rem;
     &.nav--not-home {
       left: -18rem;
+      z-index: 100;
     }
   }
   .home__project__extra-info {
